--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leinua-website",
+  "name": "leinua",
   "version": "1.0.0",
   "description": "Leinua's website",
   "main": "index.js",
