--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-express": "^1.4.1",
     "grunt-sass": "^2.0.0",
     "load-grunt-tasks": "^3.5.2"
   },
